--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <script>
 window.onload = function() {
-    window.location.href = "https://muraliksna.github.io/applink";
+    window.location.href = "https://liqunpang.github.io/applink";
 }
   </script>
 </body>
